--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -15,6 +15,9 @@ else
                 <th>
                     Customer
                 </th>
+                <th>
+                    Discount Rate
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -25,6 +28,9 @@ else
 
                     <td>
                         @Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)
+                    </td>
+                    <td>
+                        @customer.MembershipType.DiscountRate%
                     </td>
                 </tr>
 
