Add bootstrap theme

--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -1,4 +1,9 @@
 ﻿@model IEnumerable<Vidly.Models.Customer>;
+@{
+    ViewBag.Title = "Random";
+    Layout = "~/Pages/Shared/_Layout.cshtml";
+}
+
 
 <h2> Customers </h2>
 
