--- a/Views/Movies/Random.cshtml
+++ b/Views/Movies/Random.cshtml
@@ -1,27 +1,10 @@
-﻿@model Vidly.ViewModels.RandomMovieViewModel;
+﻿@model Vidly.Models.Movie
 @{
     ViewBag.Title = "Random";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-@{
-    var className = Model.Customers.Count > 0 ? "popular" : null;
-}
+<p>
+    @Model.Name
+</p>
 
-
-
-@if (Model.Customers.Count == 0)
-{
-    <text> No one has rented this movie before.</text>
-}
-else
-{
-    <ul>
-        @foreach (var customer in Model.Customers)
-        {
-            <li>
-                @customer.Name
-            </li>
-        }
-    </ul>
-}
