--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -21,7 +21,7 @@ else
                     Customer
                 </th>
                 <th>
-                    Discount Rate
+                    Membership Type
                 </th>
             </tr>
         </thead>
@@ -35,7 +35,7 @@ else
                         @Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)
                     </td>
                     <td>
-                        @customer.MembershipType.DiscountRate%
+                        @customer.MembershipType.Name
                     </td>
                 </tr>
 
