--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -32,7 +32,7 @@ else
                 <tr>
 
                     <td>
-                        @Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)
+                        @Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)
                     </td>
                     <td>
                         @customer.MembershipType.Name
