--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -7,40 +7,39 @@
 
 <h2> Movies </h2>
 
-@if (!Model.Any())
-{
-    <p> We don't have any movies yet! </p>
-}
+<p>
 
-else
-{
-    <table class="table table-bordered table-hover">
-        <thead>
+    @Html.ActionLink("New Movie", "New", "Movies", null, new { @class = "btn btn-primary" })
+</p>
+
+
+<table class="table table-bordered table-hover">
+    <thead>
+        <tr>
+            <th>
+                Movie
+            </th>
+            <th>
+                Genre
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+
+        @foreach (var movie in Model)
+        {
             <tr>
-                <th>
-                    Movie
-                </th>
-                <th>
-                    Genre
-                </th>
+
+                <td>
+                    @Html.ActionLink(movie.Name, "Edit", "Movies", new { id = movie.Id }, null)
+                </td>
+                <td>
+                    @movie.Genre.Name
+                </td>
             </tr>
-        </thead>
-        <tbody>
 
-            @foreach (var movie in Model)
-            {
-                <tr>
+        }
+    </tbody>
+</table>
 
-                    <td>
-                        @Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)
-                    </td>
-                    <td>
-                        @movie.Genre.Name
-                    </td>
-                </tr>
 
-            }
-        </tbody>
-    </table>
-
-}
