Added "Add Customer" button in customer form

--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Vidly.Models.Movie>;
 @{
-    ViewBag.Title = "Random";
+    ViewBag.Title = "Index";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
