--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -1,46 +1,45 @@
 ﻿@model IEnumerable<Vidly.Models.Customer>;
 @{
-    ViewBag.Title = "Random";
+    ViewBag.Title = "Index";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
 
 <h2> Customers </h2>
 
-@if (!Model.Any())
-{
-    <p> We don't have any customers yet! </p>
-}
+<p>
 
-else
-{
-    <table class="table table-bordered table-hover">
-        <thead>
+    @Html.ActionLink("New Customer", "New", "Customers", null, new { @class = "btn btn-primary" })
+</p>
+
+
+<table class="table table-bordered table-hover">
+    <thead>
+        <tr>
+            <th>
+                Customer
+            </th>
+            <th>
+                Membership Type
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+
+        @foreach (var customer in Model)
+        {
             <tr>
-                <th>
-                    Customer
-                </th>
-                <th>
-                    Membership Type
-                </th>
+
+                <td>
+                    @Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)
+                </td>
+                <td>
+                    @customer.MembershipType.Name
+                </td>
             </tr>
-        </thead>
-        <tbody>
 
-            @foreach (var customer in Model)
-            {
-                <tr>
+        }
+    </tbody>
+</table>
 
-                    <td>
-                        @Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)
-                    </td>
-                    <td>
-                        @customer.MembershipType.Name
-                    </td>
-                </tr>
 
-            }
-        </tbody>
-    </table>
-
-}
