add validation to customer form

--- a/Views/Customers/CustomerForm.cshtml
+++ b/Views/Customers/CustomerForm.cshtml
@@ -1,4 +1,5 @@
-﻿@model Vidly.ViewModels.CustomerFormViewModel
+﻿@using System.Web.Optimization;
+@model Vidly.ViewModels.CustomerFormViewModel
 @{
     ViewBag.Title = Model.Title;
     Layout = "~/Pages/Shared/_Layout.cshtml";
@@ -11,14 +12,17 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
         @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Customer.Birthdate)
-        @Html.TextBoxFor(m => m.Customer.Birthdate, "{0:d MM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Name)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.MembershipTypeId)
         @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipType, "Id", "Name"), "Select Membership Type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.MembershipTypeId)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Customer.Birthdate)
+        @Html.TextBoxFor(m => m.Customer.Birthdate, "{0:d MM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Birthdate)
     </div>
     <div class="checkbox">
         <label>
@@ -26,7 +30,8 @@
         </label>
     </div>
     @Html.HiddenFor(m => m.Customer.Id)
-
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
+
 
 }
